--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidSlicesExample</string>
+    <string name="main_activity_body">Android Slices Example</string>
 </resources>
